Alignments fixed.

--- a/src/Components/InventoryTable.css
+++ b/src/Components/InventoryTable.css
@@ -81,6 +81,7 @@ td {
   color: white;
   display: flex;
   justify-content: space-evenly;
+  text-align: center;
 }
 
 .tableRow {
