--- a/src/Components/ManagerPartition.css
+++ b/src/Components/ManagerPartition.css
@@ -5,11 +5,6 @@ html {
   margin: 0;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-}
-
 .toppane {
   width: 100%;
   height: 20%;
